# swhkd-gui-configurator

./: Cargo.toml  README.md  swhkd_gui_saved.json
src/: data_model.rs  interface.rs  key_recording.rs  main.rs
tests/: parser_loading.rs
tests/sweet_samples/: basic_keybind.skwhrc
