[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.24.2", features = ["full"] }
sweet = { git = "https://github.com/waycrate/sweet" }
iced = "0.10" 
serde_json = "1.0.140"
dirs = "6.0.0"

evdev = { version = "0.12", features = ["serde"] }
pest = "2.8.1"
